fix: harden category refresh and validation